summative.moria.Moria.scala.error
Compilation error:
Moria:18: error: not found: value isAgainstWall
  while(!isAgainstWall()){
         ^